[project]
name = "gym-equipment-api"
version = "0.1.0"
description = "A multi-role issue tracking system for gym equipment (FastAPI backend)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pydantic>=2",
    "pydantic-settings",
    "python-dotenv",
    "python-jose[cryptography]",
    # passlib 1.7.4 reads bcrypt.__about__, removed in bcrypt>=4.1 -> AttributeError.
    # Pin bcrypt until/unless we move off the (unmaintained) passlib.
    "passlib[bcrypt]",
    "bcrypt<4.1",
    "python-multipart",
    "slowapi",
    "redis",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
